Fixed alignment of buttons on dashboard

--- a/src/scss/components/_dashboard.scss
+++ b/src/scss/components/_dashboard.scss
@@ -34,10 +34,10 @@
   }
 
   .mobile-checkin {
-    padding: 0px 13px 32px;
+    padding: 0px 0px 10px;
   }
   .mobile-advancedSearch {
-    padding: 2px 30px 10px;
+    padding: 2px 15px 10px;
   }
   .service-name{
     width: 60%; 
